; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiDecrementNumActiveSessions.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiDecrementNumActiveSessions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ci_active_sessions_lock = common dso_local global i32 0, align 4
@ci_num_active_sessions = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CiDecrementNumActiveSessions() #0 {
  %1 = load i32, i32* @ci_active_sessions_lock, align 4
  %2 = call i32 @Lock(i32 %1)
  %3 = load i32, i32* @ci_num_active_sessions, align 4
  %4 = icmp sge i32 %3, 1
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @ci_num_active_sessions, align 4
  %7 = add nsw i32 %6, -1
  store i32 %7, i32* @ci_num_active_sessions, align 4
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i32, i32* @ci_active_sessions_lock, align 4
  %10 = call i32 @Unlock(i32 %9)
  ret void
}

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
